[gd_scene load_steps=2 format=3 uid="uid://s4s3y6qiere3"]

[ext_resource type="Script" path="res://Scripts/pause_menu.gd" id="1_ews7v"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ews7v")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -1.0
offset_top = 2.0
offset_right = 1156.0
offset_bottom = 651.0

[node name="PanelContainer" type="PanelContainer" parent="."]
modulate = Color(0.223529, 0.278431, 0.396078, 0.576471)
self_modulate = Color(0.32549, 0.352941, 1, 0.666667)
layout_mode = 1
offset_left = 213.0
offset_top = 169.0
offset_right = 884.0
offset_bottom = 309.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Resume" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "njkecldw"

[node name="Save" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "njknkj"

[node name="Load" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = " jln j"

[node name="Options" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Quit" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="PanelContainer"]
root_node = NodePath("../VBoxContainer/Load")

[connection signal="pressed" from="PanelContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
